--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -16,7 +16,7 @@
 
 .quote-container::before,
 .quote-container::after {
-  font-size: 6em; /*or whatever size you want */
+  font-size: 6em;
   line-height: 0.1em;
   vertical-align: -0.4em;
 }
@@ -29,21 +29,6 @@
 .quote-container::after {
   content: close-quote;
   margin-left: 0.25em;
-}
-
-.profile-picture {
-  width: 400px;
-  height: 400px;
-  object-fit: cover;
-  margin-left: 5rem;
-  border-radius: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s ease-in-out, filter 0.2s ease-in-out;
-}
-
-.profile-picture:hover {
-  transform: scale(1.1);
-  filter: brightness(120%);
 }
 
 .quote-text,
